# quote-master-platform

./: .env.example  .env.production  .env.template  .gitignore  .pre-commit-config.yaml  API_CONFIGURATION_COMPLETE.py  BOOTSTRAP_COMPLETE.md  BRANCH_STATUS.md  CLAUDE.md  COMPLETE_IMPLEMENTATION_PLAN.md  DATABASE_MODELS_SUMMARY.md  DEVELOPMENT_READY.md  Dockerfile  Dockerfile.backend  Dockerfile.dev  EXECUTE_WSL_FIX.md  EXECUTION_COMMAND_CENTER.md  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE1_COMPLETE.py  PHASE_2_ACHIEVEMENT_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_ROADMAP.md  PROJECT_STATE_SUMMARY.md  PROJECT_STATUS_CURRENT.md  README.md  REDIS_SETUP_GUIDE.md  SETUP_COMPLETE.md  VS_CODE_QUICK_START.md  WSL_FIX_GUIDE.md  WSL_QUICK_FIX.md  WSL_SETUP_INSTRUCTIONS.md  ai_integration_test_results.json  alembic.ini  benchmark_results.json  demo_cleaning_services.py  deploy.sh  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.observability.yml  (+30 more)
.claude/: settings.local.json
.github/: COMMIT_TEMPLATE.txt  pull_request_template.md
.github/workflows/: cd.yml  ci.yml  maintenance.yml  release.yml  security.yml
.prompts/: README.md  phase1_enhanced_ai_service_infrastructure.md  phase2_comprehensive_testing_infrastructure.md  phase3_production_security_and_middleware.md  phase4_business_logic_and_domain_services.md  phase5_data_access_and_repository_layer.md  phase6_frontend_optimization_and_features.md  phase7_devops_and_deployment_infrastructure.md  phase8_monitoring_and_observability_stack.md  phase9_documentation_and_api_specifications.md
alembic/: env.py
alembic/versions/: 804841b4617d_initial_migration.py  afcb8f0c4c83_initial_database_schema_with_sqlite_.py  da7f928a8809_add_service_quotes_and_pricing_rules_.py
claude-upload-files/: README.md  file_structure_export.txt
claude-upload-files/1-core-config/: Dockerfile
claude-upload-files/2-backend-core/: dependencies.py  main.py  model_analytics.py  model_quote.py  model_user.py  security.py  service_auth.py
claude-upload-files/3-frontend-core/: api.ts  index.css  index.html  package.json  types.ts  useAuth.ts
claude-upload-files/4-tests/: BUILD_INFORMATION.md  CLAUDE_SONNET_ANALYSIS.md  PROJECT_STRUCTURE_MAP.md  QUICK_IMPLEMENTATION_GUIDE.md  README.md  conftest.py  test_api_auth.py  test_auth.py
docs/: AI_INTEGRATION_COMPLETE.md  ALL_SYSTEMS_FIXED_FINAL_REPORT.md  API_REFERENCE.md  ARCHITECTURE.md  CLAUDE_FILE_UPLOAD_GUIDE.md  CLAUDE_SETUP.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_PLAN_SONNET4.md  FINAL_STATUS_REPORT.md  HOTSPOTS.md  KNOWLEDGE_PRESERVATION.md  NEXT_DEVELOPMENT_PHASE.md  PHASE_2_STATUS_REPORT.md  PHASE_2_TASKS.md  PHASE_2_TEST_FIXES_SUMMARY.md  README.md  REPO_STRUCTURE_MAP.md  SETUP_COMPLETE.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  AuthenticatedApp.tsx  SimpleApp.tsx  TestApp.tsx  WorkingApp.tsx  index.css  main.tsx
frontend/src/contexts/: AuthContext.tsx
monitoring/: otel-collector.yml  prometheus.yml
monitoring/prometheus/: alerts.yml
nginx/: default.conf  nginx.conf
quote-master-pro/: .gitignore  README.md  pyproject.toml
quote-master-pro/frontend/: package-lock.json  package.json
quote-master-pro/src/: README.md  main.py
requirements/: ai_service.txt  base.txt  dev.txt  prod.txt
scripts/: backup.sh  claude_smoke_test.py  complete_wsl_fix.ps1  demo_ai_service.py  deploy_production.sh  dev.sh  fix_wsl.bat  fix_wsl.ps1  init-db.sql  performance_benchmark.py  production_health_check.py  restore.sh  seed_data.py  start.sh  start_celery.py  test.sh
src/: __init__.py  main.py
src/api/: __init__.py  main.py
src/config/: __init__.py  database.py  settings.py
src/core/: __init__.py  config.py  database.py  database_types.py  exceptions.py
src/models/: __init__.py  analytics.py  pricing_rule.py  quote.py  service_quote.py  user.py  voice_recording.py
src/services/: __init__.py  pricing_service.py
src/workers/: __init__.py  background_tasks.py  celery_app.py
tests/: __init__.py  conftest.py
tests/e2e/: test_functionality_complete.py  test_user_journey.py
tests/integration/: test_ai_service_integration.py  test_api_quotes.py  test_quote_e2e.py  test_redis_final.py
tests/performance/: test_ai_performance.py  test_quote_performance.py
tests/regression/: REGRESSION_MAP.md
tests/security/: test_security_validation.py
tests/unit/: test_ai_service.py  test_auth.py  test_pricing.py  test_quote_engine.py
utils/: final_system_validation.py  final_validation.py  setup_dev.py
(+123 files in other folders)
